target/generated-tests/jtb/examples/java/ex3jtb/Eg3.jj
/* Generated by JTB 1.5.1 */
options
{
  OUTPUT_DIRECTORY = "../../../../../../target/generated-tests/jj/examples/java/ex3jtb";
  // JTB_O = "../../../../../../target/generated-tests/jtb/examples/java/ex3jtb/Eg3.jj";
  // JTB_D = "../../../../../../target/generated-tests/jtb/examples/java/ex3jtb";
  // JTB_P = "examples.java.ex3jtb";
  // JTB_NPFX = "AST";
  // JTB_VIS = "Gen,void,java.lang.String";
  // JTB_JD = true;
  // JTB_TK = true;
  // JTB_W = true;
  // JTB_CHM = true;
  // JTB_DL = true;
  // JTB_HK = false;
  // JTB_IA = true;
  // JTB_NOPLG = true;
  // JTB_PP = true;
  // JTB_TK = false;
}

PARSER_BEGIN(Eg3)
package examples.java.ex3jtb;

import examples.java.ex3jtb.visitor.*;
import examples.java.ex3jtb.syntaxtree.*;


public class Eg3 {


  /** Return variable for the {@link #jc_1} JavaCodeProduction) */
  static int jtbrt_jc_1;

  public static void main(String args[]) {
    System.err.flush();
    System.out.println("Reading from standard input (JTB version)...");
    Eg3 t = new Eg3(System.in);
    try {
      DumpVisitor v = new DumpVisitor();
      ASTStart n = t.ASTStart();
      n.accept(v, "");
      System.out.println("Thank you.");
      System.exit(0);
    }
    catch (Exception e) {
      System.out.flush();
      System.err.println("Oops.");
      System.err.println(e.getMessage());
      e.printStackTrace();
      System.exit(-1);
    }
  }
}

PARSER_END(Eg3)

SKIP :
{
  " "
| "\t"
| "\n"
| "\r"
| < "//"( ~["\n", "\r"] )*
    (
      "\n"
    | "\r"
    | "\r\n"
    ) >
| < "/*"( ~["*"] )* "*"( ~["/"]( ~["*"] )* "*" )* "/" >
}

TOKEN :
{
  < INTEGER_LITERAL :
      <DECIMAL_LITERAL>( ["l", "L"] )?
    | <HEX_LITERAL>( ["l", "L"] )?
    | <OCTAL_LITERAL>( ["l", "L"] )?
>
| < #DECIMAL_LITERAL : ["1"-"9"]( ["0"-"9"] )* >
| < #HEX_LITERAL : "0" ["x", "X"]( ["0"-"9", "a"-"f", "A"-"F"] )+ >
| < #OCTAL_LITERAL : "0"( ["0"-"7"] )* >
}

TOKEN :
{
  < IDENTIFIER : <LETTER>
    (
      <LETTER>
    | <DIGIT>
    )* >
| < #LETTER : ["_", "a"-"z", "A"-"Z"] >
| < #DIGIT : ["0"-"9"] >
}

ASTStart ASTStart() :
{
  ASTExpression n0 = null;
  Token n1 = null;
  ASTStart jtbNode = null;
}
{
  n0 = ASTExpression()
  n1 = ";"
  { jtbNode = new ASTStart(n0, n1); }
  { return jtbNode; }
}

ASTExpression ASTExpression() :
{
  ASTAdditiveExpression n0 = null;
  ASTExpression jtbNode = null;
}
{
  n0 = ASTAdditiveExpression()
  { jtbNode = new ASTExpression(n0); }
  { return jtbNode; }
}

ASTAdditiveExpression ASTAdditiveExpression() :
{
  ASTMultiplicativeExpression n0 = null;
  NodeListOptional n1 = new NodeListOptional();
  NodeSequence n2 = null;
  NodeChoice n3 = null;
  Token n4 = null;
  Token n5 = null;
  ASTMultiplicativeExpression n6 = null;
  ASTAdditiveExpression jtbNode = null;
}
{
  n0 = ASTMultiplicativeExpression()
  (
    { n2 = new NodeSequence(2); }
    (
      (
        n4 = "+"
        { n3 = new NodeChoice(n4, 0, 2); }
      |
        n5 = "-"
        { n3 = new NodeChoice(n5, 1, 2); }
      )
    )
    { n2.addNode(n3); }
    n6 = ASTMultiplicativeExpression()
    { n2.addNode(n6); }
    { n1.addNode(n2); }
  )*
  { n1.nodes.trimToSize(); }
  { jtbNode = new ASTAdditiveExpression(n0, n1); }
  { return jtbNode; }
}

ASTMultiplicativeExpression ASTMultiplicativeExpression() :
{
  ASTUnaryExpression n0 = null;
  NodeListOptional n1 = new NodeListOptional();
  NodeSequence n2 = null;
  NodeChoice n3 = null;
  Token n4 = null;
  Token n5 = null;
  Token n6 = null;
  ASTUnaryExpression n7 = null;
  ASTMultiplicativeExpression jtbNode = null;
}
{
  n0 = ASTUnaryExpression()
  (
    { n2 = new NodeSequence(2); }
    (
      (
        n4 = "*"
        { n3 = new NodeChoice(n4, 0, 3); }
      |
        n5 = "/"
        { n3 = new NodeChoice(n5, 1, 3); }
      |
        n6 = "%"
        { n3 = new NodeChoice(n6, 2, 3); }
      )
    )
    { n2.addNode(n3); }
    n7 = ASTUnaryExpression()
    { n2.addNode(n7); }
    { n1.addNode(n2); }
  )*
  { n1.nodes.trimToSize(); }
  { jtbNode = new ASTMultiplicativeExpression(n0, n1); }
  { return jtbNode; }
}

ASTUnaryExpression ASTUnaryExpression() :
{
  NodeChoice n0 = null;
  NodeSequence n1 = null;
  Token n2 = null;
  ASTExpression n3 = null;
  Token n4 = null;
  ASTMyID n5 = null;
  ASTInteger n6 = null;
  ASTUnaryExpression jtbNode = null;
}
{
  (
    { n1 = new NodeSequence(3); }
    n2 = "("
    { n1.addNode(n2); }
    n3 = ASTExpression()
    { n1.addNode(n3); }
    n4 = ")"
    { n1.addNode(n4); }
    { n0 = new NodeChoice(n1, 0, 3); }
  |
    n5 = ASTMyID()
    { n0 = new NodeChoice(n5, 1, 3); }
    {
      n5.f0.image = "reset";
    }
  |
    n6 = ASTInteger()
    { n0 = new NodeChoice(n6, 2, 3); }
  )
  { jtbNode = new ASTUnaryExpression(n0); }
  { return jtbNode; }
}

ASTMyID ASTMyID() :
{
  Token n0 = null;
  ASTMyID jtbNode = null;
  Token t = null;
}
{
  n0 = < IDENTIFIER >
  { t = n0; }
  {
    n0.image = t.image + " modified";
  }
  jc_0()
  { jtbNode = new ASTMyID(n0); }
  { return jtbNode; }
}

ASTInteger ASTInteger() :
{
  Token n0 = null;
  ASTjc_1 n1 = null;
  ASTInteger jtbNode = null;
}
{
  n0 = < INTEGER_LITERAL >
  n1 = ASTjc_1()
  { jtbNode = new ASTInteger(n0, n1); }
  { return jtbNode; }
}

JAVACODE int jc_0()
{
  int i = 0;
  return i;
}

JAVACODE ASTjc_1 ASTjc_1() /*%*/ 
{
  int j = 0;jtbrt_jc_1 = j;
  return new ASTjc_1();
}
